[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/dificulty.gd" type="Script" id=1]
[ext_resource path="res://couleur/black.tres" type="Material" id=2]

[sub_resource type="BoxMesh" id=15]
material = ExtResource( 2 )
size = Vector3( 1.5, 0.5, 0.2 )

[sub_resource type="BoxShape3D" id=16]
size = Vector3( 0.975823, 0.25, 0.1 )

[sub_resource type="FontFile" id=11]
font_path = "res://font/Angellya.ttf"

[sub_resource type="FontFile" id=17]
size = 30
font_data = SubResource( 11 )

[node name="Dificulty" type="Node3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0 )
script = ExtResource( 1 )

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 15 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="Label3D3" type="Label3D" parent="StaticBody3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "3 touches"
font = SubResource( 17 )
uppercase = true

[node name="StaticBody2" type="StaticBody3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody2"]
transform = Transform3D( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 15 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody2"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="Label3D3" type="Label3D" parent="StaticBody2"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "4 touches"
font = SubResource( 17 )
uppercase = true

[node name="StaticBody4" type="StaticBody3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody4"]
transform = Transform3D( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 15 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody4"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="Label3D3" type="Label3D" parent="StaticBody4"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "5 touches"
font = SubResource( 17 )
uppercase = true

[node name="StaticBody3" type="StaticBody3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.55, 0 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3"]
transform = Transform3D( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 15 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="Label3D3" type="Label3D" parent="StaticBody3"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "Return"
font = SubResource( 17 )
uppercase = true

[connection signal="mouse_entered" from="StaticBody3D" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody3D" to="." method="_on_StaticBody_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody2" to="." method="_on_StaticBody2_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2" to="." method="_on_StaticBody2_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody4" to="." method="_on_StaticBody4_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody4" to="." method="_on_StaticBody4_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody3" to="." method="_on_StaticBody3_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody3" to="." method="_on_StaticBody3_mouse_exited"]
